# Algorithms

./: CMakeLists.txt  LICENSE
include/data_structures/: s_list.hpp
test/: CMakeLists.txt  s_list_test.cpp
